# pytest-elegant

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/pestify/: __init__.py  plugin.py  reporter.py  utils.py
src/pytest_elegant/: __init__.py  plugin.py  reporter.py  utils.py
tests/: conftest.py  test_plugin.py  test_reporter.py
tests/fixtures/: test_failing.py  test_mixed.py  test_passing.py
