[project]
name = "pestify"
version = "0.1.0"
description = "A pytest plugin that transforms test output to match Pest PHP's beautiful aesthetic"
readme = "README.md"
authors = [
    { name = "Einenlum", email = "contact@einenlum.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.entry-points.pytest11]
pestify = "pestify.plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Pestify configuration options (all default to true)
# pestify_show_context = true      # Show code context in failure output
# pestify_group_by_file = true     # Group test results by file with PASS/FAIL headers
# pestify_show_duration = true     # Show test duration for each test

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
