[project]
name = "pytest-elegant"
version = "0.1.0"
description = "A pytest plugin that provides elegant, beautiful test output"
readme = "README.md"
authors = [
    { name = "Einenlum", email = "contact@einenlum.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pytest>=7.0.0",
    "rich>=13.0.0",
]

[project.entry-points.pytest11]
pytest_elegant = "pytest_elegant.plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# pytest-elegant configuration options (all default to true)
# elegant_show_context = true      # Show code context in failure output
# elegant_group_by_file = true     # Group test results by file with PASS/FAIL headers
# elegant_show_duration = true     # Show test duration for each test

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.5",
]
