[project]
name = "pytest-elegant"
version = "0.1.5"
description = "A pytest plugin that provides elegant, beautiful test output"
readme = "README.md"
authors = [
    { name = "einenlum", email = "contact@einenlum.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pytest>=7.0.0",
    "rich>=13.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[project.entry-points.pytest11]
pytest_elegant = "pytest_elegant.plugin"

[project.urls]
Homepage = "https://github.com/einenlum/pytest-elegant"
Repository = "https://github.com/einenlum/pytest-elegant"
"Bug Tracker" = "https://github.com/einenlum/pytest-elegant/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
norecursedirs = ["fixtures"]

# pytest-elegant configuration options (all default to true)
# elegant_show_context = true      # Show code context in failure output
# elegant_group_by_file = true     # Group test results by file with PASS/FAIL headers
# elegant_show_duration = true     # Show test duration for each test

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.5",
]
